added some html framework for the layout of the page. started my functions for using the API to fetch data per class instructional

--- a/index.html
+++ b/index.html
@@ -8,6 +8,31 @@
     <link rel="stylesheet" href="/assets/style.css">
 </head>
 <body>
+    <header class="header">
+    <h1>Weather Dashboard</h1>
+    </header>
+    <section>
+        <div>
+            <h2>Search for a City:</h2>
+        </div>
+        <div>
+            <form>
+                <label for="cname">City Name:</label><br>
+                <input type="text" id="cname" name="cname"><br>
+                <input type="submit" id="searchBtn" value="Submit">
+            </form>
+        </div>
+        <div id="recentSearches">
+            recent searches
+        </div>
+        <div id="weatherCard">
+            weather card
+        </div>
+        <div id="forcast">
+            5-Day Forcast
+        </div>
+    </section>
+
     <script src="/script.js"></script>
 </body>
 </html>
