--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
             <h2>Search for a City:</h2>
         </div>
         <div>
-            <form>
+            <form id="userInput">
                 <label for="cname">City Name:</label><br>
-                <input type="text" id="cname" name="cname"><br>
-                <input type="submit" id="searchBtn" value="Submit">
+                <input type="text" id="cname" name="cname"/><br>
+                <button type="submit" id="searchBtn">Search</button>
             </form>
         </div>
         <div id="recentSearches">
