--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
         </div>
     </section>
     <section class=" container col-sm-8">
-        <div id="weatherCard">
-            weather card
+        <div class="currentweather container border border-dark" id="weatherCard">
+            Weather
         </div>
         <div id="forcast">
             5-Day Forcast
