creating forcast card. successful linking of API, creating container heading, for loop for iteration of daily forcast data

--- a/index.html
+++ b/index.html
@@ -26,15 +26,14 @@
                 <button type="submit" id="searchBtn"  class="btn btn-primary mt-2 ">Search</button>
             </form>
         </div>
-        <div id="recentSearches">
+        <div class="container row" id="recentSearches">
         </div>
     </section>
     <section class=" container col-sm-8">
         <div class="currentweather container border border-dark" id="weatherCard">
-            Weather
         </div>
-        <div id="forcast">
-            5-Day Forcast
+        <div id="forecast">
+            
         </div>
     </section>
 </section>
