updating to current after attempts at recalling local storage

--- a/index.html
+++ b/index.html
@@ -23,14 +23,14 @@
             <form id="userInput">
                 
                 <input type="text" id="cname" name="cname"/><br>
-                <button type="submit" id="searchBtn"  class="btn btn-primary mt-2 ">Search</button>
+                <button type="submit" id="searchBtn"  class="btn btn-primary mt-2 mb-2">Search</button>
             </form>
         </div>
-        <div class="container row" id="recentSearches">
+        <div class="container col" id="recentSearches">
         </div>
     </section>
-    <section class=" container col-sm-8">
-        <div class="currentweather container border border-dark" id="weatherCard">
+    <section class=" container col-sm-8 currentweather">
+        <div class="container border border-dark" id="weatherCard">
         </div>
         <div id="forecast">
             
