organizing pseudo code

--- a/index.html
+++ b/index.html
@@ -13,8 +13,9 @@
     <header class="jumbotron text-center bg-primary text-white">
     <h1>Weather Dashboard</h1>
     </header>
-    <section class="container row">
-    <section class="container col-sm-4">
+    <section class="container">
+        <div class="row">
+    <section class="col-sm-4">
         <div> 
             <h3>Search for a City:</h3>
         </div>
@@ -29,13 +30,16 @@
         <div class="container col" id="recentSearches">
         </div>
     </section>
-    <section class=" container col-sm-8 currentweather">
+    <section class="col-sm-8 currentweather">
         <div class="container border border-dark" id="weatherCard">
         </div>
-        <div id="forecast">
-            
+        <div class = "container">
+           <div class= "row " id="forecast">
+
+           </div> 
         </div>
     </section>
+</div>
 </section>
 
 <!-- jQuery library -->
