adjusting forecast cards for better styling. updating README

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     <section class="col-sm-8 currentweather">
         <div class="container border border-dark" id="weatherCard">
         </div>
-        <div class = "container">
+        <div class = "container-fluid">
            <div class= "row " id="forecast">
 
            </div> 
